--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -1,13 +1,9 @@
 ﻿\subsubsection{Antriebsstrang}
 
-Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt.\\
+Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt. Da der Grundaufbau der Wurfmaschine sehr einfach angepasst werden kann, können alle Varianten einfach angebracht werden. Es ist auch möglich, dass alle drei Varianten an einem Prototyp getestet werden können.\\
 Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigete Übersetzung realisiert werden kann, ist nur mit zusätzlichen Achsen realisierbar. Auch müssen die Zahnräder einen genügen grossen Durchmesser haben, damit beide Schwungräder angetrieben werden können. Deshalb fällt sofort viel Gewicht an.\\
-Bei der zweiten Variante B, wird das Drehmoment je Schwungrad seperat von einem Motor zur Verfügung gestellt. Dadurch braucht es keine komplexe Übersetzung und das verfügbare Drehmoment pro Schwungrad ist doppelt so gross.
-Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels einem Zahnriemen zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig drehen müssen, muss der Zahnriemen umgelenkt werden.
-Aus diesen drei Methoden gilt die beste zu erruieren.  
-
-
-
+Bei der zweiten Variante B, wird das Drehmoment je Schwungrad seperat von einem Motor zur Verfügung gestellt. Dadurch braucht es keine komplexe Übersetzung und das verfügbare Drehmoment pro Schwungrad ist doppelt so gross.\\
+Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels eines Zahnriemens zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig drehen müssen, muss der Zahnriemen umgelenkt werden. Deshalb sind auch noch zusätzliche Achsen und Räder nötig, welches das Gewich erhöhen.\\
 
 \begin{figure}[h!]
     \begin{tabular}{p{0.5cm}p{0.8cm}rp{3cm}rr}
@@ -19,8 +15,6 @@ Aus diesen drei Methoden gilt die beste zu erruieren.
           & 2x    & Zahnrad Z90     & $0.257 Nm / 4.03 Nm$ &  3.44CHF & $57.0 g$ \\
           & 2x    & zusätzl. Achsen & -                    &  0.00CHF & $10.0 g$ \\
           & 4x    & Kugellager      & -                    &  1.76CHF & $9.8 g$  \\
-       
-      
           & \textbf{Tot.} &  & \textbf{0.257Nm} & \textbf{64.59CHF} & \textbf{215.9g} \\
     \multirow{10}[2]{*}{B}
   	  &       &                 &                      &          &  \\
@@ -33,7 +27,6 @@ Aus diesen drei Methoden gilt die beste zu erruieren.
           & 4x    & Kugellager      & -                    & 1.76CHF  & $4.9 g$  \\
           & 2x    & zusätzl. Achsen &                      & 0.00CHF  & $10.0 g$ \\
           & 2x    & Motorenaufnahme &                      & 0.00CHF  & $8.0 g$  \\
-        
           & \textbf{Tot.} &       & \textbf{0.514Nm} & \textbf{108.68CHF} & \textbf{201.2g} \\
     \multirow{9}[2]{*}{C} 
           &       &                 &                      &          &  \\
@@ -51,4 +44,4 @@ Aus diesen drei Methoden gilt die beste zu erruieren.
     \caption{Nutzen-Kostentabelle}
     \label{tab:addlabel}%
 \end{figure}
-Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten, ist die Variante B die idealste Lösung für den Antriebsstrang. Es wird ein bürstenloser Elektromotor verwendet. Die Ansteuerung des Motors ist sehr anspruchsvoll und in Kapitel \ref{fig:Schwungräder} vollständig beschrieben.
+Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten, ist die Variante B die bevorzugte Lösung für den Antriebsstrang. Ob sich diese bewähr, kann nur mit praktischen Tests ermittelt werden.
