--- a/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
@@ -1,5 +1,3 @@
 \section{Lösungskonzept}
-Der Hauptteil der Arbeit umfasst die Konzeption, diverse Funktionsmuster und 
-grundlegende Berechnungen für den autonomen Ballwerfer. 
-In den nachfolgenden Abschnitten werden, dem Prozessablauf folgend, die einzelnen 
-Komponenten des Ballwerfers näher beschrieben. 
+Als Hauptteil der Arbeit umfasst das Lösungskonzept Beschreibungen von erfüllten Funktionen und verbauten Komponenten, sowie 
+grundlegende Berechnungen für den autonomen Ballwerfer. Die Strukturierung des Abschnitts 3.2 erfolgte dabei gemäss der Reihenfolge, in welcher die Komponenten zur Lösung der Aufgabe benötigt werden.
