--- a/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
@@ -5,8 +5,8 @@ dem Ballwerfer mit der Korberkennung. Zeitgleich werden die Schwungräder auf ih
 Durch die Auswertung des fotografierten Bildes wird die Position des Korbes ermittelt und aus dieser einen 
 Winkel für die Justierung der Abwurfeinheit des Ballwerfers berechnet.\\
 Nach der Übermittlung des Winkels an den Controller richtet der Stellantrieb die Abwurfeinheit in die gewünschte Wurfposition aus. 
-Ein Förderband befördert anschliessend die Bälle zu den Schwungrädern, wo diese auf ihre Abwurfgeschwindigkeit beschleunigt werden. 
-Die Bälle verlassen nacheinander das Gerät und fliegen in einer Wurfparabel direkt in den Korb. Sobald sich alle Bälle im Korb befinden (zeitabhängig),
+Ein Förderband führt anschliessend die Bälle den Schwungrädern zu, wo diese auf ihre Abwurfgeschwindigkeit beschleunigt werden. 
+Die Bälle verlassen nacheinander das Gerät und fliegen in einer Wurfparabel direkt in den Korb. Sobald sich alle Bälle im Korb befinden (zeitbedingt),
 wird das akustische Endsignal auf dem Smartphone ausgegeben.\\
 \newpage
 
