--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
@@ -2,7 +2,7 @@
 \section{Encoder \& Drehzahlgeber}
 \fi
 \ifEMBED
-\subsection{Encoder \& Drehzahlgeber}
+\subsubsection{Encoder \& Drehzahlgeber}
 \fi
 
 Die vorgesehenen Motorfunktionen verlangen lediglich beim Brushlessmotor
@@ -75,7 +75,7 @@ Risiko für mechanische Unwucht des Rotationskörpers.
 \subsection{Magnetischer Drehzahlgeber}
 \fi
 \ifEMBED
-\subsubsection{Magnetischer Drehzahlgeber}
+\paragraph{Magnetischer Drehzahlgeber\\}
 \fi
 Um einen eigenen magnetischen Drehzahlgeber zu erstellen wird ein
 sogenannter Hall-Effekt-Schalter eingesetzt. Dieser reagiert mit seinem Ausgang
@@ -93,7 +93,7 @@ Beispiels mit einem Magneten am Rotationskörper.
 \ifSTANDALONE
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.75\textwidth]{\BrushlessPath/Bilder/AH180N_functional.png}
+	\includegraphics[width=0.75\textwidth]{\EtPath/Bilder/AH180N_functional.png}
 	\caption{Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N}
 	\label{fig:AH180N_functional}
 \end{figure}
@@ -102,7 +102,7 @@ Beispiels mit einem Magneten am Rotationskörper.
 \ifEMBED
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.75\textwidth]{\BrushlessPath/Bilder/AH180N_functional.png}
+	\includegraphics[width=0.75\textwidth]{\EtPath/Bilder/AH180N_functional.png}
 	\caption{Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N}
 	\label{fig:AH180N_functional}
 \end{figure}
