--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -1,6 +1,2 @@
 \subsection{Brushless-Motor}
-    \input{\BrushlessPath/Ansteuerung}
-    \newpage
-    \input{\BrushlessPath/Testbericht}
-    \input{\BrushlessPath/fallback}
-    \input{\BrushlessPath/encoder}
+    \input{\EtPath/Testbericht}
