--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/fallback.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/fallback.tex
@@ -2,7 +2,7 @@
 \section{Fallback}
 \fi
 \ifEMBED
-\subsection{Fallback}
+\subsubsection{Fallback}
 \fi
 Ist der Einsatz des vorgesehenen BLDC-Treibers nicht möglich, so muss eine
 alternative Ansteuerung erfolgen. Eine solche kann mit einer handelsüblichen
@@ -37,7 +37,7 @@ Mikrocontroller. Solche BLDC-Steuerungen werden im Modellbau typischerweise als
 \subsection{Konzeptbeschreibung}
 \fi
 \ifEMBED
-\subsubsection{Konzeptbeschreibung}
+\paragraph{Konzeptbeschreibung\\}
 \fi
 Um eine Regelung der Drehzahl des BLDC-Motors zu ermöglichen, bedarf es eines
 Feebacks, welches die Drehzahl wiedergibt. Dies ist mit einem
@@ -48,7 +48,7 @@ des Rotationskörpers wiedergibt, wie in Abbildung \ref{fig:fallback-sketch}
 dargestellt.
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{\BrushlessPath/Bilder/fallback_sketch_1.pdf}
+	\includegraphics[width=0.8\textwidth]{\EtPath/Bilder/fallback_sketch_1.pdf}
 	\caption{Erste Skizze des Fallback-Konzepts}
 	\label{fig:fallback-sketch}
 \end{figure}
