Geräteübersicht - Antriebsstrang korrigiert

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -1,9 +1,9 @@
-﻿\subsubsection{Antriebsstrang}
+\subsubsection{Antriebsstrang}
 
-Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt. Da der Grundaufbau der Wurfmaschine sehr einfach angepasst werden kann, können alle Varianten einfach angebracht werden. Es ist auch möglich, dass alle drei Varianten an einem Prototyp getestet werden können.\\
-Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigete Übersetzung realisiert werden kann, ist nur mit zusätzlichen Achsen realisierbar. Auch müssen die Zahnräder einen genügen grossen Durchmesser haben, damit beide Schwungräder angetrieben werden können. Deshalb fällt sofort viel Gewicht an.\\
+Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Varianten wurden betreffend ihrem verfügbarem Drehmoment, ihren Kosten und ihrem Gewicht beurteilt. Da der Grundaufbau der Wurfmaschine sehr einfach angepasst werden kann, können alle Varianten einfach angebracht werden. Es ist auch möglich, dass alle drei Varianten an einem Prototyp getestet werden.\\
+Die Variante A besteht aus einem Antriebsmotor, von welchem das Moment über verschieden Zahnräder zu den Schwungrädern übertragen wird. Der Aufbau, bei dem die benötigte Übersetzung realisiert werden kann, ist nur mit zusätzlichen Achsen realisierbar. Auch müssen die Zahnräder einen genügen grossen Durchmesser haben, damit beide Schwungräder angetrieben werden können. Deshalb fällt sofort viel Gewicht an.\\
 Bei der zweiten Variante B, wird das Drehmoment je Schwungrad seperat von einem Motor zur Verfügung gestellt. Dadurch braucht es keine komplexe Übersetzung und das verfügbare Drehmoment pro Schwungrad ist doppelt so gross.\\
-Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels eines Zahnriemens zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig drehen müssen, muss der Zahnriemen umgelenkt werden. Deshalb sind auch noch zusätzliche Achsen und Räder nötig, welches das Gewich erhöhen.\\
+Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels eines Zahnriemens zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig drehen müssen, muss der Zahnriemen umgelenkt werden. Deshalb sind auch noch zusätzliche Achsen und Räder nötig, welche das Gewicht erhöhen.\\
 
 \begin{figure}[h!]
     \begin{tabular}{p{0.5cm}p{0.8cm}rp{3cm}rr}
@@ -44,4 +44,4 @@ Die Variante C besteht aus einem antreibenden Motor. Das Drehmoment wird mittels
     \caption{Nutzen-Kostentabelle}
     \label{tab:addlabel}%
 \end{figure}
-Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten, ist die Variante B die bevorzugte Lösung für den Antriebsstrang. Ob sich diese bewähr, kann nur mit praktischen Tests ermittelt werden.
+Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten, ist die Variante B die bevorzugte Lösung für den Antriebsstrang. Ob sich diese bewährt, kann nur mit praktischen Tests ermittelt werden.
