--- a/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
@@ -1,8 +1,8 @@
-﻿\subsubsection{Grundaufbau Mechanik}
+\subsubsection{Grundaufbau Mechanik}
 Für die Grundplatten werden diverse Materialien in Betracht gezogen. Zur Auswahl stehen Aluminium, Holz und Acrylglas. Eine wichtige Anforderung an das Material ist, dass es bei einer kleinen Dichte eine genug gute Festigkeit aufweist. (siehe Abbildung\ref{fig:Mechanik})
-Dies ist nötig, da das Gewicht einen wichtigen Einfluss bei der Bewertung hat. Eine weitere Voraussetzung an das Material ist, dass die Lager der einzelnen Achsen direkt in die Platte gepresst werden können. Dadurch kann das Gewicht der Konstruktion optimiert werden. Um die unterschiedlichen Materialien auf ihre Fähigkeiten zu überprüfen, sind verschiedene Tests durchgeführt worden. Unter anderem wurden testweise verschieden grosse Kugellager in ein Acrylglas gepresst. Die befürchtete Gefahr, dass sich das Acrylglas bei einer zu hohen Presskraft spaltet, bestätigte sich nicht. Da Aluminium eine viel grössere Festigkeit als die anderen in Frage kommenden Werkstoffe hat, zugleich jedoch eine viel höhere Dichte hat, kann die Wand weniger dick sein. Jedoch ist eine gewisse Wanddicke erforderlich, um die Lager stabil zu führen. Weiter besteht bei einer zu geringen Dicke die Möglichkeit, dass eine unberechenbare Verformung der Aluminiumbleche hervortritt. Deshalb kommt Aluminium nicht in Frage. Holz bietet hingegen bei einer kleinen Dichte und ein genügend grosses Elastizitätsmodul, doch ist es sehr heterogen aufgebaut. Deshalb ist es bei einer kleinen Wanddicke sehr anfällig auf Störstellen, wodurch es zu einem unberechenbaren Versagen führen kann. Aus diesen Gründen ist der Entscheid auf das Acrylglas gefallen. Die Lichtdurchlässigkeit spricht auch für das Acrylglas, damit der ganze Ablauf des Ballwurfes besser verfolgt und analysiert werden kann. 
+Dies ist nötig, da das Gewicht direkten Einfluss auf die Bewertung hat. Eine weitere Voraussetzung an das Material ist, dass die Lager der einzelnen Achsen direkt in die Platte gepresst werden können. Dadurch kann das Gewicht der Konstruktion weiter optimiert werden. Um die unterschiedlichen Materialien auf ihre Fähigkeiten zu überprüfen, sind verschiedene Tests durchgeführt worden. Unter anderem wurden testweise verschieden grosse Kugellager in ein Acrylglas gepresst. Die befürchtete Gefahr, dass sich das Acrylglas bei einer zu hohen Presskraft spaltet, bestätigte sich nicht. Da Aluminium eine viel grössere Festigkeit als die anderen in Frage kommenden Werkstoffe hat, zugleich jedoch eine viel höhere Dichte hat, kann die Wand weniger dick sein. Doch ist eine gewisse Wanddicke erforderlich, um die Lager stabil zu führen. Weiter besteht bei einer zu geringen Dicke die Möglichkeit, dass eine unberechenbare Verformung der Aluminiumbleche hervortritt. Somit scheidet Aluminium aus. Holz bietet wiederum bei einer kleinen Dichte ein genügend grosses Elastizitätsmodul, wobei es sehr heterogen aufgebaut ist. Deshalb ist es bei einer kleinen Wanddicke sehr anfällig auf Störstellen, wodurch es zu einem unberechenbaren Versagen führen kann. Aus diesen Gründen ist der Entscheid auf das Acrylglas gefallen. Die Lichtdurchlässigkeit spricht auch für das Acrylglas, damit der ganze Ablauf des Ballwurfes besser verfolgt und analysiert werden kann. 
 
-Bei der Konstruktion wurde darauf geachtet, dass der Schwerpunkt der Masse sehr tief am Boden liegt, damit ein nicht zu grosses Moment entsteht, welches vom Abwurf der Bälle erzeugt wird und den Ballwerfer zum Umkippen bringt. Weiter wird die ganze Kraft des Ballwurfes über die Bodenplatte dem Boden abgegeben. Um ein Rutschen zu verhinden, muss eine hohe Haftreibung erzeugt werden. Dies wird mit einer Antihaftmatte erreicht, welche zwischen Spielfeld und Bodenplatte angebracht wird.
+Bei der Konstruktion wurde darauf geachtet, dass der Schwerpunkt der Masse sehr tief am Boden liegt, damit nicht ein zu grosses Moment entsteht, welches vom Abwurf der Bälle erzeugt wird und den Ballwerfer zum Umkippen bringt. Weiter wird die ganze Kraft des Ballwurfes über die Bodenplatte dem Boden abgegeben. Um ein Rutschen zu verhindern, muss eine hohe Haftreibung erzeugt werden. Dies wird mit einer Antihaftmatte erreicht, welche zwischen Spielfeld und Bodenplatte angebracht wird.
 %\begin{figure}
 %		\centering
 %		\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Mechanik.jpg}
@@ -12,7 +12,6 @@ Bei der Konstruktion wurde darauf geachtet, dass der Schwerpunkt der Masse sehr 
 
 \begin{table}[h!]
 	\centering
-	\caption{Dichte der Stoffe}
 	%\label{tab:Referenz (http://schulmodell.eu/index.php/physik/503-dichte-fester-stoffe.html)}
 
 	\begin{tabular}{|c|c|c|c|}
@@ -22,6 +21,7 @@ Bei der Konstruktion wurde darauf geachtet, dass der Schwerpunkt der Masse sehr 
 		\hline Acrylglas $5 mm$ & $1.19 \frac{g}{cm^3}$ & $393 g$ & $3300 \frac{N}{mm^2}$  \\ 
 		\hline 
 	\end{tabular} 
+	\caption{Dichte der Stoffe}
 \end{table}
  		
  			
