--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -7,7 +7,7 @@ Da die Schwungräder durch den Abwurf um ca. 30\% abgebremst werden, müssen Sie
 	\caption{Grafik Förderband}
 	\label{fig:Grafik Förderband}	
 \end{figure}
-Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen Schwungrades gefördert und anschliessend in einem $45^\cdot$ Winkel nach oben zugeführt werden. Dazu dient ein Führungselement. Die Gestaltung dafür wird sich durch die Tests zeigen. Als Ideen stehen zwei Stangen oder ein Blech, welches die Bälle zu den Schwungrädern führt zur Auswahl. Die folgende Grafik zeigt eine Auswahl möglicher Ausführungen der Schaufeln am Band. (!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!BILD)
+Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen Schwungrades gefördert und anschliessend in einem $45^\cdot$ Winkel nach oben zugeführt werden. Dazu dient ein Führungselement. Die Gestaltung dafür wird sich durch Tests zeigen. Als Ideen stehen zwei Stangen oder ein Blech, welches die Bälle zu den Schwungrädern führt zur Auswahl. Die folgende Grafik zeigt eine Auswahl möglicher Ausführungen der Schaufeln am Band. (!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!BILD)
 \begin{figure}
 	\centering
 	\includegraphics[width=0.9\textwidth]{Enddokumentation/CrashTestDummy.jpg}
@@ -15,7 +15,7 @@ Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwu
 	\label{fig:Grafiken (Schaufel genietet, geklebt, nur Klebauftrag)}	
 \end{figure}
 
-Da die Kraft gering ist, kann der Antrieb des Förderbandes mittels eines DC-Motors realisiert werden. Dieser kann mittels eines PWM-Signals über einen entsprechenden Transistor gesteuert werden. Die Abbildung \ref{fig:Schema_DC-Motor} zeigt, wie die Ansteuerung des DC-Motors umgesetzt werden wird.
+Da die Kraft gering ist, kann der Antrieb des Förderbandes mittels eines DC-Motors realisiert werden. Dieser kann durch ein PWM-Signals über einen entsprechenden Transistor gesteuert werden. Die Abbildung \ref{fig:Schema_DC-Motor} zeigt, wie die Ansteuerung des DC-Motors umgesetzt werden wird.
 	\begin{figure}[h!] %{0.45\textwidth}
 		\centering
 		\includegraphics[width=0.3\textwidth]{Enddokumentation/Loesungskonzept/Bilder/SchemaDcMotor.png}
