--- a/Dokumentation/Enddokumentation/Loesungskonzept/Startgeraet.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Startgeraet.tex
@@ -2,6 +2,6 @@
 Die Übermittlung des Startsignals wird mittels Bluetooth realisiert. 
 Sender des Signals ist ein Windows Computer mit integriertem Bluetooth Adapter (Notebook). Der Empfänger wird ein Android Smartphone sein.
 Wie aus der Technologierecherche (siehe Anhangsdokument) zu entnehmen, gewährleistet diese Konstellation grosse Freiheit bei der Umsetzung, 
-da beide Betriebssysteme relativ offen sind und beide die Programmiersprache Java unterstützen.
+da vor allem die Entwicklung für Android in Java am leichtesten geht und im Team insgesamt der grösste Erfahrungspool in dieser Sprache vorhanden ist. Zusätzlich verfügen beide Komponenten über einen WLAN-Adapter auf welchen zurückgeriffen werden könnte, sofern es zu Problemen in der Herstellung und Aufrechterhaltung der Bluetooth Sockets kommen sollte.
 Ein weiterer Vorteil des Smartphones ist, dass ein benötigtes Endsignal über die integrierten Lautsprecher 
 als akustisches Signal oder über den Display als eine visuelle Ausgabe erfolgen kann.
