--- a/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
@@ -1,5 +1,5 @@
-﻿\subsubsection{Stelleinheit}
-Um die Abwurfeinheit zum Ziel auszurichten, wird ein verstellbarer Mechanismus benötigt, der eine hohe Stellgenauigkeit aufweist. Der Drehpunkt muss sich möglichst unter den Schwungrädern befinden, damit die Position des Abwurfes im Zentrum des Spielfeldes bleibt. Die Drehung wird mit einen Schrittmotor realisiert. Die Wahl des Schrittmotors ist wegen der sehr exakte Ansteuerung ausgefallen. Dadurch kann der Verstellwinkel, welcher von der Position des Zieles abhängt, genau eingestellt werden. Der Schrittmotor wird in der Abwurfeinheit angebracht und treibt die Bodenplatte an, wodurch die Abwurfeinheit gedreht wird. Damit die Bauhöhe nicht zusätzlich erhöht wird, ist der Zahnkranz in die Bodenplatte integriert. Die Bodenplatte mit dem Zahnkranz reicht nicht über die ganze Abwurfeinheit, damit die Masse möglichst klein gehalten werden kann. Der Schrittmotor ist nach dem folgenden Drehmoment von !!!!!!!!!!!!!!!!!…Nm ausgelegt. Dies ist sehr klein, da nur der Reibungskoeffizient und die Normalkraft, welche vom Gewicht der Abwurfeinheit abhängt, das Moment erzeugen. Der Reibungskoeffizient wird durch die Lagerung klein gehalten. Die Lagerung erfolgt im Drehzentrum durch eine Hülse und im Endbereich der Abwurfeinheit durch zwei Kugelrollen, welche mit einem seitlichen Abstand angebracht sind. Dadurch ist auch die Gefahr eines Umkippens der Abwurfeinheit gesichert. Die Ansteuerung der Schrittmotoren erfolgt über den selbst konstruierten Controller. (siehe Kapitel \ref(sec:Controller)
+\subsubsection{Stelleinheit}
+Um die Abwurfeinheit zum Ziel auszurichten, wird ein verstellbarer Mechanismus benötigt, der eine hohe Stellgenauigkeit aufweist. Der Drehpunkt muss sich möglichst unter den Schwungrädern befinden, damit die Position des Abwurfes im Zentrum des Spielfeldes bleibt. Die Drehung wird mit einen Schrittmotor realisiert. Ein Schrittmotor bietet sich hier an, da somit eine sehr exakte Ansteuerung gewährleistet wird. Dadurch kann der Verstellwinkel, welcher von der Position des Zieles abhängt, genau eingestellt werden. Der Schrittmotor wird in der Abwurfeinheit angebracht und treibt die Bodenplatte an, wodurch die Abwurfeinheit gedreht wird. Damit die Bauhöhe nicht zusätzlich vergrössert wird, ist der Zahnkranz in die Bodenplatte integriert. Die Bodenplatte mit dem Zahnkranz reicht nicht über die ganze Abwurfeinheit, damit die Masse möglichst klein gehalten werden kann. Der Schrittmotor ist nach dem folgenden Drehmoment von !!!!!!!!!!!!!!!!!…Nm ausgelegt. Dies ist sehr klein, da nur der Reibungskoeffizient und die Normalkraft, welche vom Gewicht der Abwurfeinheit abhängt, das Moment erzeugen. Der Reibungskoeffizient wird durch die Lagerung klein gehalten. Die Lagerung erfolgt im Drehzentrum durch eine Hülse und im Endbereich der Abwurfeinheit durch zwei Kugelrollen, welche mit einem seitlichen Abstand angebracht sind. Dadurch ist auch die Gefahr, dass die Abwurfeinheit kippen könnte gesichert. Die Ansteuerung der Schrittmotoren erfolgt über den selbst konstruierten Controller. (siehe Kapitel \ref(sec:Controller)
 
 \begin{figure}
 	\centering
