--- a/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
+++ b/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
@@ -1,12 +1,12 @@
 \subsection{Berechnung}
-Um einen Ball durch die Schwingräder mit einem gewissen Anpressdruck zu führen, wird ein
-Drehmoment benötigt. Dazu betrachten wir den Tennisball als eine Feder mit der Federkonstante k. Zur Ermittlung der Federkonstante k wurde der Ball mit einer Masse m
+Um einen Ball durch die Schwungräder mit einem gewissen Anpressdruck zu führen, wird ein
+Drehmoment benötigt. Dazu wird der Tennisball als eine Feder mit der Federkonstante k betrachtet. Zur Ermittlung von k wurde der Ball mit einer Masse m
 beschwert, und die Verschiebung x gemessen.
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.6\textwidth]{Enddokumentation/Anhang/Bilder/KompressionBaelle.png}
-	\caption{Prinzip der k-Bestimmung}
+	\caption{Bestimmung von k}
 	\label{fig:BallKomp}
 \end{figure}
 
