Paragraph ist nun im Inhaltsverzeichnis

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -4,7 +4,8 @@
 %                                            % Mathe.-Gl. Modus = linksbündig
 %                                            % (siehe http://lefti.amigager.de/latex/Aufbau.html)
 %
-%\usepackage{Common/Layout}
+\setcounter{tocdepth}{4}   %= Aufnahme in das Inhaltsverzeichnis *
+\setcounter{secnumdepth}{4}  % = Nummerierung vertiefen *
 \newcommand{\EtPath}{Enddokumentation/ET_Gruppe/BLDC}
 \input{Enddokumentation/ET_Gruppe/common/booleans}
 \setboolean{EMBED}{true}
