--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
@@ -13,7 +13,7 @@
     \subsection{Theorie der Ansteuerung}
     \fi
     \ifEMBED
-    \paragraph{Theorie der Ansteuerung\\}
+    \paragraph{Theorie der Ansteuerung}$~~$\vspace{2mm}\\
     \fi
     \ifEMBED
         \begin{wrapfigure}{r}{0.50\textwidth}
@@ -74,7 +74,7 @@
     \subsection{Neuer Ansatz}
     \fi
     \ifEMBED
-    \paragraph{Neuer Ansatz\\}
+    \paragraph{Neuer Ansatz}$~~$\vspace{2mm}\\
     \fi
 
         \ifEMBED
