--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
@@ -75,7 +75,7 @@ Risiko für mechanische Unwucht des Rotationskörpers.
 \subsection{Magnetischer Drehzahlgeber}
 \fi
 \ifEMBED
-\paragraph{Magnetischer Drehzahlgeber\\}
+\paragraph{Magnetischer Drehzahlgeber}$~~$\vspace{2mm}\\
 \fi
 Um einen eigenen magnetischen Drehzahlgeber zu erstellen wird ein
 sogenannter Hall-Effekt-Schalter eingesetzt. Dieser reagiert mit seinem Ausgang
