--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/fallback.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/fallback.tex
@@ -37,7 +37,7 @@ Mikrocontroller. Solche BLDC-Steuerungen werden im Modellbau typischerweise als
 \subsection{Konzeptbeschreibung}
 \fi
 \ifEMBED
-\paragraph{Konzeptbeschreibung\\}
+\paragraph{Konzeptbeschreibung}$~~$\vspace{2mm}\\
 \fi
 Um eine Regelung der Drehzahl des BLDC-Motors zu ermöglichen, bedarf es eines
 Feebacks, welches die Drehzahl wiedergibt. Dies ist mit einem
